--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <title>Code Companion - Hello, world</title>
     <meta charset="utf-8">
+    <!--start javascript-->
+    <script>
+      alert('Hello, world! -- JavaScript');
+    </script>
+    <!--end javascript-->
   </head>
   <body>
     <h1>Hello, world!</h1>
