added console message for debugger.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!--start javascript-->
     <script>
       alert('Hello, world! -- JavaScript');
+      console.log("Hello, world! -- JavaScript log message.")
     </script>
     <!--end javascript-->
   </head>
